--- a/manifests/charts/base/files/gen-istio-cluster.yaml
+++ b/manifests/charts/base/files/gen-istio-cluster.yaml
@@ -7372,6 +7372,10 @@ spec:
         openAPIV3Schema:
           properties:
             spec:
+              x-kubernetes-preserve-unknown-fields: true
+              type: object
+            status:
+              x-kubernetes-preserve-unknown-fields: true
               type: object
           type: object
       served: true
@@ -7409,6 +7413,10 @@ spec:
         openAPIV3Schema:
           properties:
             spec:
+              x-kubernetes-preserve-unknown-fields: true
+              type: object
+            status:
+              x-kubernetes-preserve-unknown-fields: true
               type: object
           type: object
       served: true
@@ -7476,6 +7484,7 @@ spec:
               description:
                 "Specification of the desired state of the istio control plane resource.
                 More info: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#spec-and-status"
+              x-kubernetes-preserve-unknown-fields: true
               type: object
             status:
               description:
@@ -7483,6 +7492,7 @@ spec:
                 0 means NONE, 1 means UPDATING, 2 means HEALTHY, 3 means ERROR, 4 means RECONCILING.
                 More info: https://github.com/istio/api/blob/master/operator/v1alpha1/istio.operator.v1alpha1.pb.html &
                 https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#spec-and-status"
+              x-kubernetes-preserve-unknown-fields: true
               type: object
           type: object
       served: true
