--- a/pkg/test/framework/components/stackdriver/stackdriver.yaml
+++ b/pkg/test/framework/components/stackdriver/stackdriver.yaml
@@ -41,7 +41,7 @@ spec:
         app: stackdriver
     spec:
       containers:
-      - image: gcr.io/istio-testing/fake-stackdriver:2.0
+      - image: gcr.io/istio-testing/fake-stackdriver:doug-test-002
         imagePullPolicy: Always
         name: stackdriver
         ports:
