Sort test data JSON map keys and update cniVersions

--- a/cni/deployments/kubernetes/install/test/data/pre/minikube_cni.conf
+++ b/cni/deployments/kubernetes/install/test/data/pre/minikube_cni.conf
@@ -1,10 +1,6 @@
 {
-  "name": "rkt.kubernetes.io",
-  "type": "bridge",
-  "bridge": "mybridge",
-  "mtu": 1460,
   "addIf": "true",
-  "isGateway": true,
+  "bridge": "mybridge",
   "ipMasq": true,
   "ipam": {
     "type": "host-local",
@@ -15,5 +11,9 @@
         "dst": "0.0.0.0/0"
       }
     ]
-  }
+  },
+  "isGateway": true,
+  "mtu": 1460,
+  "name": "rkt.kubernetes.io",
+  "type": "bridge"
 }
