repeatably run integ-suit-kind

--- a/prow/config/trustworthy-jwt.yaml
+++ b/prow/config/trustworthy-jwt.yaml
@@ -11,3 +11,7 @@ kubeadmConfigPatches:
       extraArgs:
         "service-account-issuer": "kubernetes.default.svc"
         "service-account-signing-key-file": "/etc/kubernetes/pki/sa.key"
+containerdConfigPatches:
+  - |-
+    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:${KIND_REGISTRY_PORT}"]
+      endpoint = ["http://${KIND_REGISTRY_NAME}:5000"]
