--- a/cni/pkg/install-cni/pkg/install/testdata/istio-cni.conf.template
+++ b/cni/pkg/install-cni/pkg/install/testdata/istio-cni.conf.template
@@ -2,9 +2,9 @@
   "cniVersion": "0.3.1",
   "name": "istio-cni",
   "type": "istio-cni",
-  "log_level": "debug",
+  "log_level": "__LOG_LEVEL__",
   "kubernetes": {
-      "kubeconfig": "/path/to/kubeconfig",
+      "kubeconfig": "__KUBECONFIG_FILENAME__",
       "cni_bin_dir": "/path/cni/bin"
   }
 }
