--- a/releasenotes/template.yaml
+++ b/releasenotes/template.yaml
@@ -1,4 +1,4 @@
-apiVersion: releaseNotes/v1
+apiVersion: release-notes/v1
 
 # This YAML file describes the format for specifying a release notes entry for Istio.
 # This should be filled in for all user facing changes.
