--- a/operator/cmd/mesh/testdata/manifest-generate/output/all_on.golden-show-in-gh-pull-request.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/output/all_on.golden-show-in-gh-pull-request.yaml
@@ -3532,6 +3532,7 @@ spec:
                 params:
                   description: Depends on adapter implementation.
                   type: object
+                  x-kubernetes-preserve-unknown-fields: true
               type: object
             status:
               type: object
@@ -3961,6 +3962,7 @@ spec:
                 params:
                   description: Depends on referenced template.
                   type: object
+                  x-kubernetes-preserve-unknown-fields: true
                 template:
                   description:
                     The name of the template this instance creates instances
