--- a/cni/deployments/kubernetes/Dockerfile.install-cni
+++ b/cni/deployments/kubernetes/Dockerfile.install-cni
@@ -8,8 +8,7 @@ jq='1.5*' \
 
 COPY istio-cni /opt/cni/bin/
 COPY istio-iptables /opt/cni/bin/
-COPY install-cni /usr/local/bin/install-cni
-COPY filter.jq /filter.jq
+COPY install-cni /usr/local/bin/
 COPY istio-cni.conf.default /istio-cni.conf.tmp
 
 # Copy over the Repair binary
