Add prototype for potential metrics component

--- a/pkg/test/framework/features/features.yaml
+++ b/pkg/test/framework/features/features.yaml
@@ -19,6 +19,7 @@ features:
   observability:
     telemetry:
       stats:
+        standard-metrics:
         prometheus:
           customize-metric:
           merge:
