--- a/samples/addons/prometheus.yaml
+++ b/samples/addons/prometheus.yaml
@@ -413,6 +413,9 @@ spec:
             - name: config-volume
               mountPath: /etc/config
               readOnly: true
+            - name: file-sd-volume
+              mountPath: /etc/file_sd
+              readOnly: true
 
         - name: prometheus-server
           image: "prom/prometheus:v2.19.0"
