--- a/releasenotes/notes/add-release-notes-generation.yaml
+++ b/releasenotes/notes/add-release-notes-generation.yaml
@@ -22,7 +22,7 @@ kind: feature
 # - documentation
 area: documentation
 
-# issue is a (potentially comma separated list) of GitHub issues resolved in this note.
+# issue is a list of GitHub issues resolved in this note.
 issue:
 - https://github.com/istio/istio/issues/23622
 
