add uninstall by revision change (#25076)
* add uninstall change

* add test

* add filename flag, refactor

* refactor, move common function from cmd/mesh to pkg

* clean up the pruning and deleting approaches

* address comment

* address comments

* add --purge option and prune_test

* clean up code and add tests

* address more comments

* update label logic

* rebase

* update label logic

* address comments and fix lint

* fix test

--- a/pkg/test/framework/features/features.yaml
+++ b/pkg/test/framework/features/features.yaml
@@ -64,6 +64,10 @@ features:
   extensibility:
   # features releated to the lifecycle of istio installations
   installation:
+    istioctl:
+      uninstall_revision:
+      uninstall_manifest:
+      uninstall_purge:
     multicluster:
       central-istiod:
       multimaster:
