--- a/releasenotes/template.yaml
+++ b/releasenotes/template.yaml
@@ -1,4 +1,4 @@
-apiVersion: release-notes/v1
+apiVersion: release-notes/v2
 
 # This YAML file describes the format for specifying a release notes entry for Istio.
 # This should be filled in for all user facing changes.
@@ -22,7 +22,7 @@ kind:
 # - documentation
 area:
 
-# issue is a (potentially comma separated list) of GitHub issues resolved in this note.
+# issue is a list of GitHub issues resolved in this note.
 issue: 
 
 # releaseNotes is a markdown listing of any user facing changes. This will appear in the
@@ -32,6 +32,8 @@ releaseNotes:
 # upgradeNotes is a markdown listing of any changes that will affect the upgrade
 # process. This will appear in the release notes. 
 upgradeNotes:
+  title:
+  content:
 
 # securityNotes is a markdown listing of any changes related to the security of
 # Istio.
